# Course_project_3_year

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  input.txt
src/: main.cpp
src/algorithms/: band_reduction.h  bidiagonalization.h  constants.h  householder_reflection.h  qr_banded.h  regularization.h  svd_banded.h  svd_convolution.h
src/utils/: checking_matrices.h  conv_matrix.h  matrix_split_join.h  set_values.h  swap.h
tests/: dumb_test.h  graphic_tests.cpp  graphic_tests.h  precision_tests.h  random_objects.cpp  random_objects.h  test.cpp  tests_performance.h
